--- a/index.html
+++ b/index.html
@@ -9,6 +9,60 @@
 	</head>
 	<body>
 
+		<!-- Nav Header -->
+
+			<div id="nav-main">
+				<div id="nav-header">
+					<div class="nav-header-container">
+						<ul class="navbar">
+							<li><a href=""><img src="images/icons/icon_house_alt.svg"> Home</a></li>
+							<li><a id="nav-project-link">Projects <img src="images/icons/arrow_carrot-down.svg"></a></li>
+						</ul>
+					</div>
+				</div>
+
+				<div id="nav-projects">
+					<div class="gallery style2 medium">
+						<article>
+							<a href="" class="image">
+								<img src="images/gateway/gateway-mobile.jpg" alt="" />
+								<p>Peapod Gateway</p>
+							</a>
+						</article>
+						<article>
+							<a href="" class="image">
+								<img src="images/help-section/help-section-desktop.jpg" alt="" />
+								<p>Peapod Help Desk</p>
+							</a>
+						</article>
+						<article>
+							<a href="" class="image">
+								<img src="images/ice-burg/touching-ice-burg.jpg" alt="" />
+							</a>
+							<div class="caption">
+								<h3>Magna Amet</h3>
+								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<ul class="actions">
+									<li><span class="button small">Details</span></li>
+								</ul>
+							</div>
+						</article>
+						<article>
+							<a href="" class="image">
+								<img src="images/shedd-aquarium/tactile-otter.jpg" alt="" />
+							</a>
+							<div class="caption">
+								<h3>Magna Amet</h3>
+								<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+								<ul class="actions">
+									<li><span class="button small">Details</span></li>
+								</ul>
+							</div>
+						</article>
+					</div>
+				</div>
+			</div>
+
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
