--- a/index.html
+++ b/index.html
@@ -15,19 +15,9 @@
 				<div id="nav-header">
 					<div class="nav-header-container">
 						<ul class="navbar">
-							<li><a href=""><img src="images/icons/icon_house_alt.svg"> Home</a></li>
-							<li><a href=""> About</a></li>
-							<li><a id="nav-project-link">Projects <img src="images/icons/arrow_carrot-down.svg"></a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div id="nav-header-mobile">
-					<div class="nav-header-container">
-						<ul class="navbar">
-							<li><a href=""><img src="images/icons/icon_house_alt.svg"> Home</a></li>
-							<li><a href=""> About</a></li>
-							<li><a id="nav-project-link">Projects <img src="images/icons/arrow_carrot-down.svg"></a></li>
+							<li><a id="nav-home-link" href="">Home</a></li>
+							<li><a href="">About</a></li>
+							<li><a id="nav-projects-link">Projects</a></li>
 						</ul>
 					</div>
 				</div>
