--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Peapod Gateway</p></a>
+							<a href=""><p>Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -52,7 +52,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Peapod Help Section</p></a>
+							<a href=""><p>Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -67,7 +67,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Peapod Help Section</p></a>
+							<a href=""><p>Ice-Burg Project</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -82,7 +82,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Peapod Help Section</p></a>
+							<a href=""><p>Shedd Aquarium Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -98,7 +98,7 @@
 								<h1>Tristan Bernardo</h1>
 								<p>UI/UX Designer</p>
 							</header>
-							<p class="major"><!--[-->A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.<!--]--></p>
+							<p class="major">I'm an experienced UI/UX Designer with a strong background in Web and Mobile Design.</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Read More</a></li>
 							</ul>
@@ -111,7 +111,7 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Peapod Gateway Page</h2>
+							<h2>Gateway Page Redesign</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -125,7 +125,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Peapod Help Section</h2>
+							<h2>Help Section Redesign</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -153,7 +153,7 @@
 				<!-- Five -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Shedd Aquarium Exhibit Accessibility</h2>
+							<h2>Shedd Aquarium Accessibility</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -395,7 +395,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
-							<form method="post" action="#">
+							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
 									<input type="text" name="name" id="name" value="" />
@@ -420,13 +420,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="http://www.linkedin.com/in/tkbdesign" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:tkbernardo@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>Copyright &copy; 2017 Tristan Bernardo</p>
 						</div>
 					</footer>
 
