--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="en">
 	<head>
 		<title>Tristan Bernardo | UI/UX Designer</title>
 		<meta charset="utf-8" />
@@ -27,7 +27,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="" class="image">
-									<img src="images/gateway/gateway-mobile.jpg" alt="" />
+									<img src="images/gateway/gateway-mobile.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
 								<div class="caption">
 									<h3>Magna Amet</h3>
@@ -42,7 +42,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="" class="image">
-									<img src="images/help-section/help-section-desktop.jpg" alt="" />
+									<img src="images/help-section/help-section-desktop.jpg" alt="Image of Peapod Help Secion on desktop" />
 								</a>
 								<div class="caption">
 									<h3>Magna Amet</h3>
@@ -57,7 +57,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="" class="image">
-									<img src="images/ice-burg/touching-ice-burg.jpg" alt="" />
+									<img src="images/ice-burg/touching-ice-burg.jpg" alt="Image of girl touching illuminated sculpture" />
 								</a>
 								<div class="caption">
 									<h3>Magna Amet</h3>
@@ -72,7 +72,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="" class="image">
-									<img src="images/shedd-aquarium/tactile-otter.jpg" alt="" />
+									<img src="images/shedd-aquarium/tactile-otter.jpg" alt="Image of participant touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
 									<h3>Magna Amet</h3>
@@ -112,13 +112,13 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Gateway Page Redesign</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>In 2012, we began a complete overhaul of the Peapod website on desktop and mobile. As part of this effort I was tasked with redesigning the Gateway page.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/gateway/gateway-mobile.jpg" alt="" />
+							<img src="images/gateway/gateway-mobile.jpg" alt="Image of Peapod Gateway on a mobile device" />
 						</div>
 					</section>
 
@@ -126,13 +126,13 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Help Section Redesign</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/help-section/help-section-desktop.jpg" alt="" />
+							<img src="images/help-section/help-section-desktop.jpg" alt="Image of Peapod Help Secion on desktop" />
 						</div>
 					</section>
 
@@ -140,13 +140,13 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Ice-Burg Project</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>DePaul University's School of Design, in the College of Computing and Digital Media, put out a request for proposals for its inaugural Design Impact Project grant. The objective of this grant is to encourage the development of cutting-edge visual and interactive designs, that have a positive cultural or social impact. I had the honor of being on one of the teams who's project was chosen.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/ice-burg/touching-ice-burg.jpg" alt="" />
+							<img src="images/ice-burg/touching-ice-burg.jpg" alt="Image of girl touching illuminated sculpture" />
 						</div>
 					</section>
 
