--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Gateway Page Redesign</p></a>
+							<a href=""><p>Peapod Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -52,7 +52,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Help Section Redesign</p></a>
+							<a href=""><p>Peapod Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -111,7 +111,7 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Gateway Page Redesign</h2>
+							<h2>Peapod Gateway Page Redesign</h2>
 							<p>In 2012, we began a complete overhaul of the Peapod website on desktop and mobile. As part of this effort I was tasked with redesigning the Gateway page.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -125,7 +125,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Help Section Redesign</h2>
+							<h2>Peapod Help Section Redesign</h2>
 							<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -154,7 +154,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Shedd Aquarium Accessibility</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
