--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Methodology</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<p>As an HCI practitioner there are many methods for me to choose from. Wheter I'm investigating a new problem space, validating a design, or testing for usability issues. Here are a collection of methods I've used on my projects.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
