--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Methodology</h2>
-							<p>As an HCI practitioner there are many methods that I rely upon for investigating a new problem space, validating a design, or testing for usability issues. Here are a collection of methods I've used on my projects.</p>
+							<p>As an HCI practitioner I rely upon a system of methods for investigating a new problem space, validating a design, or testing for usability issues. Here are a collection of methods I've used on my projects.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
