--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Peapod Gateway Page Redesign</h2>
-							<p>In 2012, we began a complete overhaul of the Peapod website on desktop and mobile. As part of this effort I was tasked with redesigning the Gateway page.</p>
+							<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -140,7 +140,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Ice-Burg Project</h2>
-							<p>DePaul University's School of Design, in the College of Computing and Digital Media, put out a request for proposals for its inaugural Design Impact Project grant. The objective of this grant is to encourage the development of cutting-edge visual and interactive designs, that have a positive cultural or social impact. I had the honor of being on one of the teams who's project was chosen.</p>
+							<p>I was part of a team that created an interactive art installation, that responds to proximity and touch by engaging the user with music and lights.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -325,66 +325,81 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Methodology</h2>
-							<p>As an HCI practitioner I rely upon a system of methods for investigating a new problem space, validating a design, or testing for usability issues. Here are a collection of methods I've used on my projects.</p>
+							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a system of methods for investigating new problem spaces, validating design decisions, and testing for usability issues. Here is a collection of methods I've used on my projects:</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
-									<h3>Lorem</h3>
+									<h3>Wireframing</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
-									<h3>Ipsum</h3>
+									<h3>Prototyping</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>Dolor</h3>
+									<h3>User Testing</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-wifi"></span>
-									<h3>Amet</h3>
+									<h3>Interviews</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-cog"></span>
-									<h3>Magna</h3>
+									<h3>Contextual Inquiry</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
+									<h3>Observations</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
+									<h3>Heuristic Evaluation</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-refresh"></span>
-									<h3>Elit</h3>
+									<h3>Competitive Analysis</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
+									<h3>Storyboarding</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
+									<h3>Card Sorting</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
+									<h3>Journey Mapping</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-leaf"></span>
-									<h3>Risus</h3>
+									<h3>Affinity Diagramming</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-bolt"></span>
+									<h3>Sketching</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-envelope"></span>
+									<h3>Surveys</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-leaf"></span>
+									<h3>Literature Review</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 							</div>
