--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
+									<a href="images/gallery/fulls/01.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="Test1" />
 									</a>
 									<div class="caption">
@@ -186,7 +186,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
 										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
 									</a>
 									<div class="caption">
@@ -198,7 +198,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
+									<a href="images/gallery/fulls/03.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -210,7 +210,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/gallery/fulls/04.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -222,7 +222,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="images/gallery/fulls/05.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -234,7 +234,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
+									<a href="images/gallery/fulls/06.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
 										<img src="images/gallery/thumbs/06.jpg" alt="" />
 									</a>
 									<div class="caption">
