--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-refresh"></span>
+									<span class="icon style2 major  fa-copy"></span>
 									<h3>Competitive Analysis</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-hashtag"></span>
+									<span class="icon style2 major fa-pencil-square-o"></span>
 									<h3>Storyboarding</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
