--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div class="nav-header-container">
 						<ul class="navbar">
 							<li><a id="nav-home-link" href="">Home</a></li>
-							<li><a href="">About</a></li>
+							<li><a href="about.html">About</a></li>
 							<li><a id="nav-projects-link">Projects</a></li>
 						</ul>
 					</div>
