--- a/gateway.html
+++ b/gateway.html
@@ -93,7 +93,7 @@
 								<h1>Tristan Bernardo</h1>
 								<p>UI/UX Designer</p>
 							</header>
-							<p class="major"><span class="image left"><img src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" /></span>Currently working as a UI/UX Designer for <a href="http://www.peapod.com" target="_blank">Peapod</a>, and finishing up my master's degree in Human-Computer Interaction, at <a href="http://www.cdm.depaul.edu/academics/Pages/MSInHuman-ComputerInteraction.aspx" target="blank">DePaul University</a>. I love working with smart energetic people. I believe in trying to get an understanding of a problem space, before jumping into a solution. I enjoy collaborating with others, and I often like to sit back and observe how others break down a problem.</p>
+							<p class="major"><span class="image left"><img src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" /></span>Currently working as a UI/UX Designer for <a href="http://www.peapod.com" target="_blank">Peapod</a>, and finishing up my master's degree in Human-Computer Interaction, at <a href="http://www.cdm.depaul.edu/academics/Pages/MSInHuman-ComputerInteraction.aspx" target="blank">DePaul University</a>. I love working with smart energetic people. I believe in understanding a problem space, before jumping into a solution. I enjoy collaborating with others, and I often like to sit back and observe how others break down a problem.</p>
 							<p class="major">
 								<ul>
 									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology
@@ -112,7 +112,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Communication &amp; Collaboration</h2>
-							<p>A huge part of my job depends on effectively communicating with others, be it presenting to stake holders, or collaborating with developers. I've been fortunate in my career to be part of great teams, and work with talented individuals.</p>
+							<p>A huge part of my job depends on effectively communicating with others, be it presenting to stake holders, or collaborating with developers. I've been fortunate to be part of great teams, and work with talented individuals.</p>
 						</div>
 
 						<!-- Gallery -->
