--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 	<body>
 
 		<!-- Nav Header -->
-
 			<div id="nav-main">
 				<div id="nav-header">
 					<div class="nav-header-container">
 						<ul class="navbar">
-							<li><a id="nav-home-link" href="">Home</a></li>
+							<li><a id="nav-home-link" href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a id="nav-projects-link">Projects</a></li>
 						</ul>
@@ -26,63 +25,59 @@
 					<div class="gallery style2 medium">
 						<div class="nav-project-container">
 							<article>
-								<a href="" class="image">
+								<a href="gateway.html" class="image">
 									<img src="images/gateway/gateway-mobile.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
 								<div class="caption">
-									<h3>Magna Amet</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<p>Redesigned Peapod Gateway page for desktop and mobile.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Peapod Gateway Page Redesign</p></a>
+							<a href="gateway.html"><p>Peapod Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
-								<a href="" class="image">
+								<a href="help-section.html" class="image">
 									<img src="images/help-section/help-section-desktop.jpg" alt="Image of Peapod Help Secion on desktop" />
 								</a>
 								<div class="caption">
-									<h3>Magna Amet</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<p>Created new information architecture for Peapod Help section.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Peapod Help Section Redesign</p></a>
+							<a href="help-section.html"><p>Peapod Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
-								<a href="" class="image">
+								<a href="ice-burg.html" class="image">
 									<img src="images/ice-burg/touching-ice-burg.jpg" alt="Image of girl touching illuminated sculpture" />
 								</a>
 								<div class="caption">
-									<h3>Magna Amet</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<p>Helped create interactive art installation that responds to proximity and touch.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Ice-Burg Project</p></a>
+							<a href="ice-burg.html"><p>Ice-Burg Project</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
-								<a href="" class="image">
+								<a href="shedd-aquarium.html" class="image">
 									<img src="images/shedd-aquarium/tactile-otter.jpg" alt="Image of participant touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
-									<h3>Magna Amet</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
-							<a href=""><p>Shedd Aquarium Accessibility</p></a>
+							<a href="shedd-aquarium.html"><p>Shedd Aquarium Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -100,7 +95,7 @@
 							</header>
 							<p class="major">I'm an experienced UI/UX Designer with a strong background in Web and Mobile Design.</p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Read More</a></li>
+								<li><a href="about.html" class="button big wide">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -167,240 +162,83 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-						</div>
-
-						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
-								<article>
-									<a href="images/gallery/fulls/01.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="Test1" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
-									</a>
-									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/03.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/04.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/05.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/06.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-							</div>
-
-					</section>
-
-				<!-- Six -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
 							<h2>Methodology</h2>
 							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a system of methods for investigating new problem spaces, validating design decisions, and testing for usability issues. Here is a collection of methods I've used on my projects:</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-object-ungroup"></span>
 									<h3>Wireframing</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Useful in ideating new features or systems. Used to communicate early, low-fi design of layout and structure.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-object-group"></span>
 									<h3>Prototyping</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Paper prototypes are a low cost way to test for usability issues, while hi-fi interactive prototypes are useful testing as well as communicating with developers.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-user"></span>
 									<h3>User Testing</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Crucial element of UX Design for uncovering usability issues, as well as a means to collect qualitative and quantitative data.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-comments-o"></span>
 									<h3>Interviews</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Helpful for finding out how users goals, needs, and pain-points, as well as how they interact with a system.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-search"></span>
 									<h3>Contextual Inquiry</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Valuable tool for learning about users in their natural settings. Can gain completely new insights which were not previously thought about.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-group"></span>
 									<h3>Observations</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Useful for gaining insights into a new domain. Can collect a large volume of data, unbiased by the Hawthorne effect.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-desktop"></span>
 									<h3>Heuristic Evaluation</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Guidelines, popularized by Jakob Nielsen among others, which are useful in finding usability and accessibility issues.</p>
 								</section>
 								<section>
 									<span class="icon style2 major  fa-copy"></span>
 									<h3>Competitive Analysis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Process of analyzing competitors in a particular domain, to learn how they handle common design problems.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-pencil-square-o"></span>
 									<h3>Storyboarding</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Visual tool for conceptualizing a design solution through storytelling, using quick sketches.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-th"></span>
 									<h3>Card Sorting</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Technique, which can be conducted on-line or in person, for creating understandable groupings of information. Useful in designing an information architecture, and menu structures.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-map-o"></span>
 									<h3>Journey Mapping</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Used to plot out an ideal user's experience using a service or a system. Good for visualizing pain-points and opportunities for improvement of the user experience.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-sitemap"></span>
 									<h3>Affinity Diagramming</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Process of grouping insights from observations into insight clusters, to gain a understanding of a particular domain. Useful for generating User Stories.</p>
 								</section>
 								<section>
 									<span class="icon style2 major  fa-pencil"></span>
 									<h3>Sketching</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Quick and easy way to generate initial design ideas. Very low cost, and can be easily discarded.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-pie-chart"></span>
 									<h3>Surveys</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Method of collecting qualitative and quantitative data from a desired set of users. Can be distributed to a very large set of users, so statistical significance can be achieved.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-book"></span>
 									<h3>Literature Review</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Valuable way to tap into existing knowledge gained from previous studies. An efficient strategy for gaining insights, and may alleviate the need to conduct a new study.</p>
 								</section>
 							</div>
 						</div>
