--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Communication &amp; Collaboration</h2>
-							<p>A huge part of my job depends on effectively communicating with others, be it presenting to stake holders, or collaborating with developers. I've been fortunate in my career to be part of great teams, and work with talented individuals.</p>
+							<p>A huge part of my job depends on effectively communicating with others, be it presenting to stake holders, or collaborating with developers. I've been fortunate in my career to be part of great teams, and work with talented individuals, which has allowed me to improve my soft skills.</p>
 						</div>
 
 						<!-- Gallery -->
