--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<section>
 									<span class="icon style2 major fa-object-group"></span>
 									<h3>Prototyping</h3>
-									<p>Paper prototypes are a low cost way to test for usability issues, while hi-fi interactive prototypes are useful testing as well as communicating with developers.</p>
+									<p>Paper prototypes are a low cost way to test for usability issues, while hi-fi interactive prototypes are useful for testing as well as communicating with developers.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-user"></span>
